shell_script/mongo-configmap.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mongo
  labels:
     app: mongodb
