shell_script/mongo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: mongo
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
