shell_script/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: mongo
spec:
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: mongodb
