shell_script/mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: mongo
spec:
  selector:
    matchLabels:
      app: mongo-express
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: mongo
spec:
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
#    nodePort: 30000
  selector:
    app: mongo-express
#  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: mongo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-mongo.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 80
#test
