shell_script/mongo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: mongo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-mongo.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-service
                port:
                  number: 80
